refactor: pr remarks